# simple-fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.dev.yml  compose.prod.yml  entrypoint  pyproject.toml  setup.cfg
src/: main.py
src/settings/: __init__.py  database.py
src/users/: models.py  router.py  schema.py
