[tool.poetry]
package-mode = false
name = "simple-fastapi"
version = "0.1.0"
description = "test fastapi with docker and postgres"
authors = ["Gabriel Ionescu <ionescuig@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
